--- a/app.json
+++ b/app.json
@@ -18,13 +18,28 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
-    ]
+      "expo-font",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Permitir $(PRODUCT_NAME) utilizar sua localização."
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "146280bc-554e-4587-b1f1-08c0c900b4bf"
+      }
+    }
   }
 }
