--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^51.0.39",
     "expo-av": "~14.0.7",
     "expo-checkbox": "~3.0.0",
+    "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
