Imagem na edição de perfil

--- a/app.json
+++ b/app.json
@@ -34,6 +34,12 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Permitir $(PRODUCT_NAME) utilizar sua localização."
         }
+      ],
+      [
+        "expo-document-picker",
+        {
+          "iCloudContainerEnvironment": "Production"
+        }
       ]
     ],
     "extra": {
