Corrigindo logo ao gerar apk

--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
-      ]
+      ],
+      "package": "com.rafaelnoll00.expotemplateblanktypescript"
     },
     "web": {
       "favicon": "./assets/favicon.png"
